kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calisyn
  labels:
    app: calisyn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calisyn
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: calisyn
    spec:
      containers:
        - image: liut7/calisyn
          name: calisyn
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calisyn
  name: calisyn
spec:
  ports:
    - name: calisyn
      port: 3002
      protocol: TCP
      targetPort: 3002
  selector:
    app: calisyn
  type: ClusterIP
