kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '5'
  name: calisyn
spec:
  rules:
    - host: calisyn.example.com
      http:
        paths:
          - backend:
              service:
                name: calisyn
                port:
                  number: 3002
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: calisyn-tls
